add web amplify連携

--- a/web/instagram-style-app/src/App.css
+++ b/web/instagram-style-app/src/App.css
@@ -20,3 +20,26 @@
 .App-link {
   color: #09d3ac;
 }
+
+.logo-instagram {
+  padding: 20px;              /* 余白指定 */
+  text-align:  center;        /* 中央寄せ */
+  height: 100px;              /* 高さ指定 */
+}
+
+
+.login-default {
+  padding: 20px;              /* 余白指定 */
+  text-align:  center;        /* 中央寄せ */
+  height: 100px;              /* 高さ指定 */  
+}
+
+.login-facebook {
+  padding: 20px;              /* 余白指定 */
+  text-align:  center;        /* 中央寄せ */
+  height: 100px;              /* 高さ指定 */
+}
+
+.login-test {
+  width: 300px;
+}
